# smallville-agents

./: .gitignore  AGENTS.md  CLAUDE.md  FINETUNE_PLAN.md  LAB_NOTEBOOK.md  PROJECT_STATUS.md  README.md  ROADMAP.md  __init__.py  agent.py  committee.py  config.py  config_validator.py  conversation.py  conversation.py.bak  display.py  environment.py  lab-notebook.md  llm.py  main.py  main.py.bak  memory.py  memory_qdrant.py  personas.py  planning_utils.py  prompts.py  pyproject.toml  reflection_engine.py  report.md  requirements-dev.txt  requirements.txt  run.sh  sim_pause_for_tts.sh  skillbank.py  telegram_broadcaster.py  test_qdrant_memory.py  validate_config.py  voice_integration.py  voice_map.py  webui.py
finetune/: export_gguf.py  generate_social_data.py  generate_training_data.py  train.py  train_social.py
finetune/data/: comprehensive_training.jsonl  final_comprehensive.jsonl  final_massive.jsonl  massive_expansion.jsonl  more_training.jsonl  social_expert_training.jsonl  training_data.jsonl
finetune/profiles/: ana_santos.yaml  carlos_gomez.yaml  carmen_moreno.yaml  diego_moreno.yaml  dr_williams.yaml  eddy_lin.yaml  emily_moore.yaml  john_lin.yaml  (+17 more)
qdrant_data/: meta.json
steering/: README.md  __init__.py  agent_concepts.py  compare_backends.py  comparison_results_steering.json  engine.py  train_concepts.py
tests/: conftest.py  test_agent_async.py  test_agent_pure.py  test_config.py  test_conversation.py  test_conversation_async.py  test_environment.py  test_integration.py  test_memory.py  test_personas.py
webui/: app.js  index.html  map.js  style.css
(+244 files in other folders)
