[project]
name = "generative-agents"
version = "0.1.0"
description = "Implementation of Stanford's Generative Agents paper using local Ollama models"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "neural_controllers/",
    "finetune/",
    ".git/",
    "__pycache__/",
    "db/",
    "saves/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "ASYNC"]
ignore = [
    "E501",
    "N806",
    "N803",
    "E402",
    "E701",
    "E731",
    "E741",
    "F403",
    "F405",
    "B007",
    "B023",
    "C401",
    "C405",
    "UP038",
    "W293",
    "W291",
    "F841",
    "ASYNC230",
    "ASYNC221",
    "E722",
    "F821",
    "N999",
    "F401",
    "F601",
    "ASYNC109",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
